# template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: basic_usage.py
src/project/: __init__.py
tests/: test_basic.py
